--- a/styles.css
+++ b/styles.css
@@ -131,23 +131,16 @@ button {
     height: 32px;
     position:absolute;
     border-radius: 3px;
-    margin: 500px 4000px;
-    margin-top: 780px;
-    margin-left: 4880px;
+    bottom: 95px;
+    left: 100px;
 
 }
 .instagramm{
    
    
   
-    width: 100%;
-    height: 100px;
-    margin-top: 100px;
-    margin-left: 120px;
-    margin-block:1px;
-    border-radius: 1px;
-    position:absolute
-    
+    left: 150px;
+    position: absolute
 }
 
 .OU{
