--- a/styles.css
+++ b/styles.css
@@ -7,31 +7,31 @@ body {
     align-items: flex-start;
     font-family: sans-serif;
     place-items: center;
-    
+
 }
 
 .img-celular {
-    width: 620px;
-    height: 850px;
-    margin-left: 270px;
-    margin-top: 250px;
+    width: 500px;
+    height: 650px;
+    margin-left: 128px;
+    margin-top: 100px;
 }
 
 .container {
     border: 1px solid #D3D3DE;
     display: flex;
     flex-direction: column;
-    width: 400px;
-    padding: 40px;
+    width: 388px;
+    padding: 35px;
     background-color: #ffffff;
-    height: 450px;
+    height: 379px;
     z-index: auto;
     position: absolute;
-    margin-left: 1100px;
-    margin-bottom: 280px;
-    margin-right: 2px;
-    margin-top: 250px;
-   
+    margin-left: 446px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-top: 60px;
+    top: 6px;
 }
 
 input {
@@ -47,7 +47,8 @@ input {
 
 
 }
-.telefone{
+
+.telefone {
     margin-top: 100px;
     font: 1600px;
 }
@@ -63,7 +64,6 @@ button {
     margin: 8px 40px;
     margin-top: 20px;
     cursor: pointer
-    
 }
 
 .facebook {
@@ -85,25 +85,21 @@ button {
 
 }
 
-.imagens {
-    position: relative;
-}
-
 .img-insta {
-    height: 730px;
+    height: 562px;
     position: absolute;
-    left: 475px;
-    top: 285px;
+    left: 362px;
+    top: 49px;
     transition: 2s ease-in-out;
-    width: 335px;
+    width: 279px;
 }
 
 .cadastro {
     border: 1px solid #D3D3DE;
     display: flex;
     flex-direction: column;
-    width: 420px;
-    padding: 30px;
+    width: 434px;
+    padding: 14px;
     background-color: #ffffff;
     height: 0px;
     position: absolute;
@@ -113,43 +109,38 @@ button {
     block-size: auto;
     z-index: auto;
     position: absolute;
-    margin-left: 1200px;
-    margin-top: 400px;
+    margin-left: 445px;
+    margin-top: 200px;
     margin-right: 100px;
     text-align: center;
 }
 
-.cadastro span{
+.cadastro span {
     color: #0095f6;
     cursor: pointer;
 
 }
 
-.face-logo{
+.face-logo {
     background-image: url(img/face......._resized.png);
     width: 32px;
     height: 32px;
-    position:absolute;
+    position: absolute;
     border-radius: 3px;
     bottom: 95px;
     left: 100px;
 
 }
-.instagramm{
-   
-   
-  
-    width: 100%;
-    height: 100px;
-    margin-top: 100px;
-    margin-left: 120px;
-    margin-block:1px;
-    border-radius: 1px;
-    position:absolute
-    
+
+.instagramm {
+
+
+
+    left: 150px;
+    position: absolute
 }
 
-.OU{
+.OU {
 
     margin-left: 40px;
     margin-top: 30px;
@@ -157,7 +148,7 @@ button {
 }
 
 .Obtenha {
-   
+
     display: flex;
     flex-direction: column;
     width: 420px;
@@ -171,42 +162,340 @@ button {
     block-size: auto;
     z-index: auto;
     position: absolute;
-    margin-left: 1200px;
-    margin-top: 550px;
+    margin-left: 440px;
+    margin-top: 225px;
     margin-right: 100px;
     text-align: center;
 
 }
 
 .google {
-   
+
     height: 57px;
     position: relative;
     right: 30px;
-    top: 373px;
+    top: 300px;
     width: px;
-    margin: 20px 55px 8px;
+    margin: 10px 10px 10px 10px;
     font-weight: bolder;
     font-size: 16px;
     cursor: pointer;
+    left: 523px;
 
 }
 
-.microsoft{
+.microsoft {
 
     height: 55px;
     position: relative;
-    left: 230px;
-    top: 280px;
+    left: 121px;
+    top: 300px;
     width: px;
     margin: 25px 4px 8px;
     font-weight: bolder;
     font-size: 16px;
     cursor: pointer;
+    }
+
+.novoobtenha {
+
+    opacity: 0;
+
 }
 
-.novoobtenha{
-
-opacity: 0;
+video {
+    width: 324px;
+    height: 565px;
+    position: absolute;
+    left: 268px;
+    top: 125px;
+    border-radius: 69px;
+}
+.imagens {
+    position: absolute;
+    left: 20px;
 
 }
+.caixa-branca {}
+
+
+
+/*telas maiores que 32polegadas  //////////////////////////////////////////////////////////////////////////////////*/
+
+@media screen and (min-width: 1001px) and (max-width: 2000px) {
+    .img-celular {
+        width: 500px;
+        height: 650px;
+        margin-left: 128px;
+        margin-top: 100px;
+    }
+    
+    .container {
+        border: 1px solid #D3D3DE;
+        display: flex;
+        flex-direction: column;
+        width: 388px;
+        padding: 35px;
+        background-color: #ffffff;
+        height: 379px;
+        z-index: auto;
+        position: absolute;
+        margin-left: 446px;
+        margin-bottom: 10px;
+        margin-right: 10px;
+        margin-top: 60px;
+        top: 5px;
+    }
+    
+    input {
+        height: 36px;
+        border: 1px solid #D3D3DE;
+        border-radius: 3px;
+        margin-top: 10px;
+        background-color: #fafafa;
+        font-size: 15px;
+        font-family: Arial, Helvetica, sans-serif;
+        padding: 5px 10px;
+        margin: 5px 40px;
+    
+    
+    }
+    
+    .telefone {
+        margin-top: 100px;
+        font: 1600px;
+    }
+    
+    
+    
+    button {
+        background-color: #0095f6;
+        height: 45px;
+        border-radius: 10px;
+        border: none;
+        color: #ffffff;
+        margin: 8px 40px;
+        margin-top: 20px;
+        cursor: pointer
+    }
+    
+    .facebook {
+        color: #385185;
+        text-align: center;
+        margin-top: 40px;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: bolder;
+        font-size: 16px;
+    }
+    
+    .esqueceu-senha {
+        color: #385185;
+        text-align: center;
+        cursor: pointer;
+        font-size: 15px;
+        margin-top: 20px;
+    
+    }
+    
+    .img-insta {
+        height: 562px;
+        position: absolute;
+        left: 362px;
+        top: 49px;
+        transition: 2s ease-in-out;
+        width: 279px;
+    }
+    
+    .cadastro {
+        border: 1px solid #D3D3DE;
+        display: flex;
+        flex-direction: column;
+        width: 434px;
+        padding: 14px;
+        background-color: #ffffff;
+        height: 0px;
+        position: absolute;
+        margin: auto;
+        top: auto;
+        border-block: inherit;
+        block-size: auto;
+        z-index: auto;
+        position: absolute;
+        margin-left: 445px;
+        margin-top: 200px;
+        margin-right: 100px;
+        text-align: center;
+    }
+    
+    .cadastro span {
+        color: #0095f6;
+        cursor: pointer;
+    
+    }
+    
+    .face-logo {
+        background-image: url(img/face......._resized.png);
+        width: 32px;
+        height: 32px;
+        position: absolute;
+        border-radius: 3px;
+        bottom: 67px;
+        left: 100px;
+    
+    }
+    
+    .instagramm {
+    
+    
+    
+        left: 150px;
+        position: absolute
+    }
+    
+    .OU {
+    
+        margin-left: 40px;
+        margin-top: 30px;
+        color: #D3D3DE;
+    }
+    
+    .Obtenha {
+    
+        display: flex;
+        flex-direction: column;
+        width: 420px;
+        padding: 30px;
+        /* background-color: #ffffff; */
+        height: 0px;
+        position: absolute;
+        margin: auto;
+        top: auto;
+        border-block: inherit;
+        block-size: auto;
+        z-index: auto;
+        position: absolute;
+        margin-left: 440px;
+        margin-top: 225px;
+        margin-right: 100px;
+        text-align: center;
+    
+    }
+    
+    .google {
+    
+        height: 57px;
+        position: relative;
+        right: 30px;
+        top: 300px;
+        width: px;
+        margin: 10px 10px 10px 10px;
+        font-weight: bolder;
+        font-size: 16px;
+        cursor: pointer;
+        left: 523px;
+    
+    }
+    
+    .microsoft {
+    
+        height: 55px;
+        position: relative;
+        left: 121px;
+        top: 300px;
+        width: px;
+        margin: 25px 4px 8px;
+        font-weight: bolder;
+        font-size: 16px;
+        cursor: pointer;
+        }
+    
+    .novoobtenha {
+    
+        opacity: 0;
+    
+    }
+    
+    video {
+        width: 324px;
+        height: 565px;
+        position: absolute;
+        left: 268px;
+        top: 125px;
+        border-radius: 69px;
+    }
+    .imagens {
+        position: absolute;
+        left: 20px;
+    
+    }
+    .caixa-branca {}
+
+
+    }
+    
+/* TELA DO MEU CELULAR ///////////////////////////////////////////////////////////////////////////////////////////////*/
+
+@media screen and (max-width: 1000px) {
+    .imagens {
+        display: none;
+       
+
+    }
+*{
+border: 0 0 0 0;
+    
+
+}
+
+.container{
+    margin-right: 60px;
+}
+
+.caixa-branca{
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    top: 200px;
+    left: 10px;
+    
+    
+}
+.cadastro{
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    top: 330px;
+    left: -408px;
+}
+
+.Obtenha{
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    top: 330px;
+    left: -400px;
+}
+
+.microsoft{
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    top: 790px;
+    left: 95px;
+    
+}
+
+.google{
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    top: 804px;
+    left: 280px;
+}
+
+.face-logo{
+    bottom: 67px;
+}
+
+   }
